--- a/ansible/roles/dnam/tasks/main.yml
+++ b/ansible/roles/dnam/tasks/main.yml
@@ -6,7 +6,7 @@
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
   with_items: "{{ dnam_files }}"
-  tags: [docker]
+  tags: [dnam]
 
 - name: Install DNA-M
   yum:
@@ -15,21 +15,23 @@
     validate_certs: no
     state: present
     update_cache: yes
-  tags:   
-    - debug
+  tags: [dnam]
 
 - name: Remove repository from a specific repo file
   yum_repository:
     name: transmode
     state: absent
+  tags: [dnam]
 
 - name: Import file.sql similar to mysql -u <username> -p <password> < initDb.sql
   mysql_db:
     state: import
     name: all
     target: /opt/transmode/tnm/mainserver/scripts/initDb.sql
+  tags: [dnam]
 
 - name: Start tnmserver service and enable the service
   service: name=tnmserver
            state=started
            enabled=yes
+  tags: [dnam]
